Create initial page layout
Co-authored-by: Evan Markowitz <emarkowitz1@gmail.com>
Co-authored-by: David Engel <davidjengel2012@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Gametime Starter Kit</title>
+      <meta charset="UTF-8">
+      <title>Wheel of Skywalker</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,700" rel="stylesheet">
+      <link rel="stylesheet" href="./css/styles.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   </head>
   <body>
-    <h1>Gametime Starter Kit</h1>
+      <header> 
+          <h1>Wheel of mis-Fortune!</h1>
+      </header>
+      <main>
+        <section class="section-left">
 
-    <img src="/images/turing-logo.png" alt="turing logo" height="100px" width="100px">
+        </section>
+        <section class="section-right">
+
+        </section>
+      
+      </main>
+      <footer>
+          
+      </footer>
+
+    <!-- <img src="/images/turing-logo.png" alt="turing logo" height="100px" width="100px"> -->
 
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
