Add player status display
Co-authored-by: Evan Markowitz <emarkowitz1@gmail.com>
Co-authored-by: David Engel <davidjengel2012@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,33 @@
           <h1>Wheel of mis-Fortune!</h1>
       </header>
       <main>
-        <section class="section-left">
-
+        <section class="section-puzzle">
+          <h2 class="section-puzzle-1">Puzzle:<span class="footer_player1-name"></span></h2>
+        </article>
         </section>
-        <section class="section-right">
-
+        <section class="section-wheel">
         </section>
-      
       </main>
       <footer>
-          
+        <section class="player-one" id="player-one" alt="player-1">
+          <article>
+            <h2 class="footer_player-1"> Player 1: <span class="player-one-name"></span></h2>
+            <!-- <img class="player-image player-one" src="" alt="player-one"> -->
+            <!-- <h3 class="player-name" id="p1Name-board">Player 1</h3>
+            <h4 class="player-score-label">Score:<span class="player-score p1-score">0</span></h4>
+            <h4 class="player-bank-label">Bank:<span class="player-bank p1-bank">0</span></h4> -->
+          </article>
+        </section>
+        <section class="player-two" id="player-two" alt="player-2">
+          <article>
+              <h2 class="footer_player-two"> Player 2: <span class="footer_player2-name"></span></h2>
+          </article>
+        </section>
+        <section class="player-three" id="player-three" alt="player-3">
+            <article>
+                <h2 class="footer_player-three"> Player 3: <span class="footer_player3-name"></span></h2>
+            </article>
+        </section>
       </footer>
 
     <!-- <img src="/images/turing-logo.png" alt="turing logo" height="100px" width="100px"> -->
