Build guess letter on dom

--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,13 @@
         </section>
         <div class='middle-container'>
           <section class='category-hint'></section>
-          <section class ='puzzle'></section>
+          <section class ='puzzle'>
+            <ul class="puzzle-container"></ul>
+          </section>
         </div>
         <div class = 'death-star'>
           <img id='deathstar' src='./images/death-star.png'>
         </div>
-    
       </div>
       <section class='main-letters'>
         <article>A</article>
