Add alphabet and puzzle display, format and change display attributes

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,66 @@
       </header>
       <main>
         <section class="section-puzzle">
+          <article>
           <h2 class="section-puzzle-1">Category:<span class="footer_player1-name"></span></h2>
-        </article>
+          </article>
+          <p>
+
+          </p>
+          <p>
+
+          </p>
+          <article class="puzzle-display" id="puzzle-display">
+            <table>
+              <tr>
+                <td class="puzzle-letter pl1">A</td>
+                <td class="puzzle-letter pl2">R</td>
+                <td class="puzzle-letter pl3">M</td>
+                <td class="puzzle-letter pl4">C</td>
+                <td class="puzzle-letter pl5">H</td>
+                <td class="puzzle-letter pl6">A</td>
+                <td class="puzzle-letter pl7">I</td>
+                <td class="puzzle-letter pl8">R</td>
+              </tr>
+            </table>
+          </article>
+          <article>
+            <table class="alphabet" id="alphabet" alt="alphabet used to track which letters have been guessed">
+              <tr>
+                <td class="alpha-remaining alpha-a">A</td>
+                <td class="alpha-remaining alpha-b">B</td>
+                <td class="alpha-remaining alpha-c">C</td>
+                <td class="alpha-remaining alpha-d">D</td>
+                <td class="alpha-remaining alpha-e">E</td>
+                <td class="alpha-remaining alpha-f">F</td>
+                <td class="alpha-remaining alpha-g">G</td>
+                <td class="alpha-remaining alpha-h">H</td>
+                <td class="alpha-remaining alpha-i">I</td>
+                <td class="alpha-remaining alpha-j">J</td>
+                <td class="alpha-remaining alpha-k">K</td>
+                <td class="alpha-remaining alpha-l">L</td>
+                <td class="alpha-remaining alpha-m">M</td>
+              <!-- </tr>
+              <tr> -->
+                <td class="alpha-remaining alpha-n">N</td>
+                <td class="alpha-remaining alpha-o">O</td>
+                <td class="alpha-remaining alpha-p">P</td>
+                <td class="alpha-remaining alpha-q">Q</td>
+                <td class="alpha-remaining alpha-r">R</td>
+                <td class="alpha-remaining alpha-s">S</td>
+                <td class="alpha-remaining alpha-t">T</td>
+                <td class="alpha-remaining alpha-u">U</td>
+                <td class="alpha-remaining alpha-v">V</td>
+                <td class="alpha-remaining alpha-w">W</td>
+                <td class="alpha-remaining alpha-z">X</td>
+                <td class="alpha-remaining alpha-y">Y</td>
+                <td class="alpha-remaining alpha-z">Z</td>
+              </tr>
+            </table>
+          </article>
         </section>
         <section class="section-wheel">
+            <img class="death-star-wheel" src="./images/death-star.jpg" alt="death-star-wheel"> 
         </section>
       </main>
       <footer class="footer-players">
@@ -37,10 +93,11 @@
           </article>
         </section>
         <section class="player-three" id="player-three" alt="player-3">
-          <article>
-            <img class="player-image player-three" src="./images/bb8.svg" alt="player-two">  
+            <img class="player-image player-three" src="./images/bb8.svg" alt="player-three"> 
+          <article> 
             <h2 class="footer_player-three"> Player 3: <span class="footer_player3-name"></span></h2>
           </article>
+          
         </section>
       </footer>
 
