Build Answer Question Functionality

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,16 @@
           <img id='deathstar' src='./images/death-star.png'>
         </div>
       </div>
+      <section class='turn'>
+        <form class='turn-controls'>
+          <input class="guess-word-input">
+          <div class='turn-buttons'>
+            <button class='spin' type='button'>SPIN</button>
+            <button class='guess-word' type='button'>GUESS WORD</button>
+            <button class='buy vowel' type='button'>BUY VOWEL</button>
+        </div>
+      </form>
+      </section>
       <section class='main-letters'>
         <article>A</article>
         <article>B</article>
