Add death star image, update css

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
           </article>
         </section>
         <section class="section-wheel">
-            <img class="death-star-wheel" src="./images/death-star.jpg" alt="death-star-wheel"> 
+            <img class="death-star-wheel" src="./images/death-star.png" alt="death-star-wheel"> 
         </section>
       </main>
       <footer class="footer-players">
