--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   </head>
   <body>
-    <header class='header'>
+    <header>
       <h1>DEATHSTAR OF FORTUNE</h1>
     </header>
     <main>
@@ -36,7 +36,7 @@
             <ul class="puzzle-container"></ul>
           </section>
         </div>
-        <div class = 'death-star'>
+        <div class = 'death-star-container'>
           <img id='deathstar' src='./images/death-star.png'>
         </div>
       </div>
