--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,20 @@
     <main>
         <div class="middle-section">
         <section class='main-score-cards middle'>
-          <article class='player-scorecard player1'>
-            <h2>Player1</h2>
-            <h3>Score:</h3>
-            <h3>Bank:</h3>
+          <article class='player-scorecard player1 1'>
+            <h2 id='player-name1'>Player1</h2>
+            <h3 id='player-1-score'>Score:</h3>
+            <h3 id='player-1-bank'>Bank:</h3>
           </article>
-          <article class='player-scorecard player2'>
-            <h2>Player2</h2>
-            <h3>Score:</h3>
-            <h3>Bank:</h3>
+          <article class='player-scorecard player2 2 '>
+            <h2 id='player-name2' >Player2</h2>
+            <h3 id='player-2-score'>Score:</h3>
+            <h3 id='player-2-bank'>Bank:</h3>
           </article>
-          <article class='player-scorecard player3'>
-            <h2>Player3</h2>
-            <h3>Score:</h3>
-            <h3>Bank:</h3>
+          <article class='player-scorecard player3 3'>
+            <h2 id='player-name3'>Player3</h2>
+            <h3 d='player-3-score'>Score:</h3>
+            <h3 id='player-3-bank'>Bank:</h3>
           </article>
         </section>
         <div class='middle-container'>
