Player1, 2, & 3 names all populate after initital login page

--- a/src/index.html
+++ b/src/index.html
@@ -15,17 +15,17 @@
         <div class="middle-section">
         <section class='main-score-cards middle'>
           <article class='player-scorecard player1'>
-            <h2>Player1</h2>
+            <h2 id='js-player1-name'>Player1</h2>
             <h3>Score:</h3>
             <h3>Bank:</h3>
           </article>
           <article class='player-scorecard player2'>
-            <h2>Player2</h2>
+            <h2 id='js-player2-name'>Player2</h2>
             <h3>Score:</h3>
             <h3>Bank:</h3>
           </article>
           <article class='player-scorecard player3'>
-            <h2>Player3</h2>
+            <h2 id='js-player3-name'>Player3</h2>
             <h3>Score:</h3>
             <h3>Bank:</h3>
           </article>
