Work on guess letter functionality, fix bankrupt functions, add timer for bankrupt and lose a turn notifications
co-authored-by: evan markowitz <emarkowitz1@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -46,37 +46,37 @@
           <div class='turn-buttons'>
             <button class='spin' type='button'>SPIN</button>
             <button class='guess-word' type='button'>GUESS WORD</button>
-            <button class='buy vowel' type='button'>BUY VOWEL</button>
+            <button class='buy vowel' type='button' disabled>BUY VOWEL</button>
         </div>
       </form>
       </section>
       <section class='main-letters'>
-        <article>A</article>
-        <article>B</article>
-        <article>C</article>
-        <article>D</article>
-        <article>E</article>
-        <article>F</article>
-        <article>G</article>
-        <article>H</article>
-        <article>I</article>
-        <article>J</article>
-        <article>K</article>
-        <article>L</article>
-        <article>O</article>
-        <article>M</article>
-        <article>N</article>
-        <article>P</article>
-        <article>Q</article>
-        <article>R</article>
-        <article>S</article>
-        <article>T</article>
-        <article>U</article>
-        <article>V</article>
-        <article>W</article>
-        <article>Y</article>
-        <article>X</article>
-        <article>Z</article>
+        <button class='vowel-a vow' disabled>A</button>
+        <button class='consonant-b con'>B</button>
+        <button class='consonant-c con'>C</button>
+        <button class='consonant-d con'>D</button>
+        <button class='vowel-e vow' disabled>E</button>
+        <button class='consonant-f con'>F</button>
+        <button class='consonant-g con'>G</button>
+        <button class='consonant-h con'>H</button>
+        <button class='vowel-i vow' disabled>I</button>
+        <button class='consonant-i con'>J</button>
+        <button class='consonant-j con'>K</button>
+        <button class='consonant-k con'>L</button>
+        <button class='vowel-o vow' disabled>O</button>
+        <button class='consonant-l con'>M</button>
+        <button class='consonant-m con'>N</button>
+        <button class='consonant-n con'>P</button>
+        <button class='consonant-o con'>Q</button>
+        <button class='consonant-p con'>R</button>
+        <button class='consonant-q con'>S</button>
+        <button class='consonant-t con'>T</button>
+        <button class='vowel-u vow' disabled>U</button>
+        <button class='consonant-v con'>V</button>
+        <button class='consonant-w con'>W</button>
+        <button class='consonant-x con'>Y</button>
+        <button class='consonant-y con'>X</button>
+        <button class='consonant-z con'>Z</button>
       </section>
     </main>
   </body>
