Add initial prompt to notify user of game controls and score-keeping before game displays

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
       <h1>DEATHSTAR OF FORTUNE</h1>
     </header>
     <main>
-        <div class="middle-section">
+        <div class='pregame-prompt-container'>
+        </div>
+        <div class='middle-section'>
         <section class='main-score-cards middle'>
           <article class='player-scorecard player1 1'>
             <h2 id='js-player1-name'>Player1</h2>
