Build buy vowel functionality

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,14 @@
       </div>
       <section class='turn'>
         <form class='turn-controls'>
-          <input class="guess-word-input">
+          <div class = 'guess-word-pop-up'>
+            <input class="guess-word-input">
+            <button class="guess-word-submit">SUBMIT WORD GUESS</button>
+          </div>
           <div class='turn-buttons'>
             <button class='spin' type='button'>SPIN</button>
             <button class='guess-word' type='button'>GUESS WORD</button>
-            <button class='buy vowel' type='button' disabled>BUY VOWEL</button>
+            <button class='buy-vowel' type='button' disabled>BUY VOWEL</button>
         </div>
       </form>
       </section>
