RoundOver changes bank and puts screen to blank

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>DEATHSTAR OF FORTUNE</h1>
     </header>
-    <main>
+    <main class='main'>
         <div class='pregame-prompt-container'>
         </div>
         <div class='middle-section'>
@@ -19,17 +19,17 @@
           <article class='player-scorecard player1 1'>
             <h2 id='js-player1-name'>Player1</h2>
             <h3>Score:<span id='player-1-score'> 0 </span></h3>
-            <h3 id='player-1-bank'>Bank:</h3>
+            <h3>Bank:<span id='player-1-bank'>0</span></h3>
           </article>
           <article class='player-scorecard player2 2'>
             <h2 id='js-player2-name' >Player2</h2>
             <h3>Score:<span id='player-2-score'> 0 </span></h3>
-            <h3 id='player-2-bank'>Bank:</h3>
+            <h3 >Bank:<span id='player-2-bank'>0</span></h3>
           </article>
           <article class='player-scorecard player3 3'>
             <h2 id='js-player3-name'>Player3</h2>
             <h3>Score:<span id='player-3-score'> 0 </span></h3>
-            <h3 id='player-3-bank'>Bank:</h3>
+            <h3>Bank:<span id='player-3-bank'>0</span></h3>
           </article>
         </section>
         <div class='middle-container'>
