Add stop button for audio

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,10 @@
         <button class='consonant-z con'>Z</button>
       </section>
     </main>
-    <iframe width="40" height="25" src="https://www.youtube-nocookie.com/embed/EjMNNpIksaI?controls=1&autoplay=1&autohide=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="swThemeAudio" width="2" height="2" src="https://www.youtube-nocookie.com/embed/EjMNNpIksaI?controls=1&autoplay=1&autohide=1&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <div class = "button">
+      <button id="pause-button">STOP AUDIO</button>
+    </div>
   </body>
   
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
