Fix issue with round counter

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
       </form>
       </section>
       <section class='main-letters'>
-        <button class='vowel-a vow' disabled>A</button>
+        <!-- <button class='vowel-a vow' disabled>A</button>
         <button class='consonant-b con'>B</button>
         <button class='consonant-c con'>C</button>
         <button class='consonant-d con'>D</button>
@@ -81,7 +81,7 @@
         <button class='consonant-w con'>W</button>
         <button class='consonant-x con'>Y</button>
         <button class='consonant-y con'>X</button>
-        <button class='consonant-z con'>Z</button>
+        <button class='consonant-z con'>Z</button> -->
       </section>
     </main>
     <iframe width="40" height="25" src="https://www.youtube-nocookie.com/embed/EjMNNpIksaI?controls=1&autoplay=1&autohide=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
