pre pull commit

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
       <h1>DEATHSTAR OF FORTUNE</h1>
     </header>
     <main class='main'>
-        <div class='pregame-prompt-container'>
-        </div>
+        <div class='pregame-prompt-container'></div>
+        <div class='postgame-prompt-container'></div>
         <div class='middle-section'>
         <section class='main-score-cards middle'>
           <article class='player-scorecard player1 1'>
