--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <h1>DEATHSTAR OF FORTUNE</h1>
+      <div class='header-round-indicator'></div>
     </header>
     <main class='main'>
         <div class='pregame-prompt-container'></div>
